* Fix https://sourceforge.net/tracker/?func=detail&aid=3388382&group_id=6926&atid=106926
    - "Trailing comments with whitespace are not recognised"
    - Thanks to briconaut for the report and to rbowen for the patch and test.

Version 2.68:    ( Tue Jun 21 22:14:39 IDT 2011 )
-------------------------------------------------

* Typo correction: https://rt.cpan.org/Ticket/Display.html?id=69003

Version 2.67:    ( Tue Jun 21 14:55:07 IDT 2011 )
-------------------------------------------------

* Made sure that parameters with empty values will be written to the file.
    - Fixes https://rt.cpan.org/Public/Bug/Display.html?id=68554 .

Version 2.66:    ( Sat Jan 29 18:28:53 IST 2011 )
-------------------------------------------------

* Add support for the handle_trailing_comment option to support trailing
comments at the end of a param=value line.
    - Fixes https://rt.cpan.org/Public/Bug/Display.html?id=43843 .
    - Original patch by Peter Xu.
    - Some comments and corrections of the patch by Shlomi Fish (the current 
    Config-IniFiles maintainer.)

Version 2.65:    ( Thu Nov 25 12:00:00 IST 2010 )
-------------------------------------------------

* Replaced calls to File::Temp's tempfile() with those to its tempdir()
followed by File::Spec->catfile() - hopefully fixes the CPAN smoking failures
on Win32.

Version 2.64:    ( Sat Nov 20 11:47:07 IST 2010 )
-------------------------------------------------

* Fixed https://rt.cpan.org/Ticket/Display.html?id=63177
    - tag-release.pl was installed into lib/Config by EU-MM. Converted the
    Makefile.PL to a wrapper around Build.PL by using Module-Build's
    create_makefile_pl='small' instead of create_makefile_pl='traditional' .

Version 2.63:    ( Fri Nov 19 16:50:58 IST 2010 )
-------------------------------------------------

* Fixed https://rt.cpan.org/Ticket/Display.html?id=63079 by
refactoring/bug-fixing the main module into the _OutputParam method, which